// proto3で記述
syntax = "proto3";

import "google/empty.proto";

service TodoSrv {
    rpc GetTodo (google.protobuf.Empty) returns (GetTodoResponse);
}

message Todo {
    string id = 1;
    string title = 2;
    string description = 3;
}

message GetTodoResponse {
    repeated Todo todo = 1;
}